fixed alignment issue (groups)

--- a/app/shared/components/people/people.component.css
+++ b/app/shared/components/people/people.component.css
@@ -19,7 +19,8 @@
     transform: scale(0.95);
     cursor: pointer;
 }
-
+/*.mainimage{
+}*/
 .mat-card:hover .mat-card-title {color: rgb(184, 51, 51)}
 
 .mat-card-title{
